[tool.poetry]
name = "lark-dynamic"
packages = [{include = "lark_dynamic"}]
version = "1.1.4"
description = "Grammar generator for Lark parsing toolkit"
authors = ["Dmitry Gritsenko <k01419q45@ya.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
